<resources>
    <string name="app_name">LetsChat</string>
    <string name="no_account">No Account?</string>
    <string name="todo">TODO</string>
    <string name="letchat">letCHAT</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="add">Add</string>
</resources>
