<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imgLoginBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ellipse_header_background" />

    <ImageView
        android:id="@+id/imageAppIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:srcCompat="@drawable/ic_let_chat" />

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/letchat"
        android:textAlignment="center"
        android:textColor="@color/colorLoginTitle"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toEndOf="@+id/imgLoginBackground"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/imgLoginBackground"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <EditText
        android:id="@+id/etSignUpName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/input_box_border_design"
        android:elevation="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <EditText
        android:id="@+id/etSignUpUserID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/input_box_border_design"
        android:elevation="16dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_login_border_design"
        android:elevation="16dp"
        android:text="@string/login"
        android:textColor="@color/colorLoginTitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline5"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/or"
            android:textColor="@color/colorLineStyle"
            android:textStyle="bold" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/line" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btnLoginWithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_login_with_facebook" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="23dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/colorBoxShadow"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="623dp" />

        <TextView
            android:id="@+id/txtSignUpTextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/sign_up"
            android:textColor="@color/colorLineStyle" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>