<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/signUpToolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSignUpBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/signUpToolbar"
        app:srcCompat="@drawable/ellipse_header_background" />

    <ImageView
        android:id="@+id/imageAppIcon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline1"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/signUpToolbar"
        app:srcCompat="@drawable/ic_let_chat" />

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/letchat"
        android:textAlignment="center"
        android:textColor="@color/colorLoginTitle"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline2"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline1" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <EditText
        android:id="@+id/etSignUpName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/input_box_border_design"
        android:elevation="10dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline3"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline2" />

    <EditText
        android:id="@+id/etSignUpUserID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:elevation="10dp"
        android:background="@drawable/input_box_border_design"
        android:ems="10"
        android:hint="@string/id"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline4"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpName" />

    <EditText
        android:id="@+id/etSignUpEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/input_box_border_design"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline5"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpUserID" />

    <EditText
        android:id="@+id/etSignUpPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="15dp"
        android:elevation="10dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/input_box_border_design"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline6"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline5" />

    <android.support.design.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_login_border_design"
        android:elevation="16dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorLoginTitle"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuideLine2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/verticalGuideLine1"
        app:layout_constraintTop_toBottomOf="@+id/etSignUpPassword"
        app:layout_constraintVertical_bias="0.054" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideLine1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/verticalGuideLine2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

</android.support.constraint.ConstraintLayout>